Bug 356756 - LOD painting with wrapped mode only has instant updates for stroke inside original image
Summary: LOD painting with wrapped mode only has instant updates for stroke inside ori...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-15 22:57 UTC by Friedrich W. H. Kossebau
Modified: 2016-04-01 08:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Friedrich W. H. Kossebau 2015-12-15 22:57:03 UTC
Having switching on both "Instant Preview Mode" and "Wrap Around Mode", when painting over duplicated parts of the image there is no instant preview, no stroke shown at all. Only once the stroke is finished, it is rendered as it should be.
The parts of strokes done over the original image have instant preview, including in the duplicated images.


Reproducible: Always

Steps to Reproduce:
1. Create or load an image
2. Switch on both "Instant Preview Mode" and "Wrap Around Mode"
3. Paint long strokes, going across the border of the original image

Actual Results:  
Preview while doing the stroke is only shown for the parts of the stroke done over the original image.

Expected Results:  
Preview is always shown, no matter if the stroke is done outside or inside the original image.
Comment 1 Halla Rempt 2015-12-16 07:40:38 UTC
Confirmed and made a phab task: https://phabricator.kde.org/T1195
Comment 2 Dmitry Kazakov 2016-04-01 08:31:52 UTC
Git commit e87a019ea95d7e65da455dfcc6bb363bad2f10b6 by Dmitry Kazakov.
Committed on 01/04/2016 at 08:31.
Pushed by dkazakov into branch 'master'.

Fix working of WrapAround mode when Instant Preview is active

CC:kimageshop@kde.org
Fixes T1195

M  +1    -1    libs/image/kis_default_bounds.cpp
M  +16   -1    libs/image/kis_image.cc
M  +7    -1    libs/image/kis_image.h
M  +1    -1    libs/image/kis_paint_device.cc

http://commits.kde.org/krita/e87a019ea95d7e65da455dfcc6bb363bad2f10b6