Fix working of WrapAround mode when Instant Preview is active

CC:kimageshop@kde.org
Fixes T1195
BUG:356756