libs/image/kis_default_bounds.cpp
@@ -55,7 +55,7 @@ QRect KisDefaultBounds::bounds() const
     /**
      * By default return infinite rect to cover everything
      */
-    return m_d->image ? m_d->image->bounds() : infiniteRect;
+    return m_d->image ? m_d->image->effectiveLodBounds() : infiniteRect;
 }
 
 bool KisDefaultBounds::wrapAroundMode() const
